--- a/my full stack web/package.json
+++ b/my full stack web/package.json
@@ -1,5 +1,26 @@
 {
+  "name": "my-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "vite": "^7.2.7"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0",
+    "@stomp/stompjs": "^7.2.1",
+    "chart.js": "^4.5.1",
+    "lightweight-charts": "^4.1.1",
+    "recharts": "^3.6.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.1",
+    "vite": "^7.3.0"
   }
 }
